--- a/payeredge.html
+++ b/payeredge.html
@@ -60,14 +60,15 @@
     th{color:var(--muted);font-weight:700;line-height:1.15}
     td{overflow:hidden;text-overflow:ellipsis}
 
-    /* Column widths (money gets more room): 36 / 10 / 18 / 18 / 18 */
-    .bundle col:nth-child(1){width:36%}
+    /* Column widths (money gets more room) */
+    /* 35 / 10 / 19 / 18 / 18 */
+    .bundle col:nth-child(1){width:35%}
     .bundle col:nth-child(2){width:10%}
-    .bundle col:nth-child(3){width:18%}
+    .bundle col:nth-child(3){width:19%}
     .bundle col:nth-child(4){width:18%}
     .bundle col:nth-child(5){width:18%}
 
-    .cell-item{line-height:1.28;padding-bottom:2px}
+    .cell-item{line-height:1.32;padding-bottom:2px}
     .cell-item .label{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;font-size:.95em}
     @media (min-width:1200px){ .cell-item .label{-webkit-line-clamp:3} }
 
@@ -77,16 +78,30 @@
     .cell-money{
       white-space:nowrap;font-weight:800;text-align:right;
       font-size:clamp(11px,1.05vw,13px);
-      padding-left:18px;padding-right:4px;   /* breathing room between columns */
+      font-variant-numeric: tabular-nums;
+      padding-left:16px;padding-right:6px; /* breathing room */
       overflow:visible;text-overflow:clip;
-      min-width:110px;                        /* prevents squeeze/crowding */
+      min-width:112px;                    /* prevents squeeze/crowding */
     }
     .th-money{white-space:normal;text-align:right}
 
-    /* enforce right alignment even if class is missed */
+    /* ensure right alignment even if class missed */
     .bundle td:nth-child(3), .bundle th:nth-child(3),
     .bundle td:nth-child(4), .bundle th:nth-child(4),
     .bundle td:nth-child(5), .bundle th:nth-child(5){ text-align:right }
+
+    /* tighter head, clean totals */
+    table.bundle thead th{white-space:nowrap;letter-spacing:.1px;padding-top:6px;padding-bottom:6px}
+    table.bundle tfoot tr th, table.bundle tfoot tr td{
+      border-top:1px solid rgba(255,255,255,.08);border-bottom:0;padding-top:9px;padding-bottom:8px
+    }
+
+    /* breakdown details */
+    details.break summary{cursor:pointer;opacity:.9}
+    .breakbox{padding:6px 8px 10px}
+    .breakgrid{display:grid;grid-template-columns:1fr repeat(3,minmax(80px,1fr));gap:6px 8px}
+    .breakgrid .hdr{color:var(--muted);font-weight:600;font-size:11px}
+    .breakgrid .money{text-align:right;font-variant-numeric:tabular-nums}
 
     /* mobile */
     @media (max-width:1280px){ th{font-size:11px} .cell-money{font-size:12px} }
@@ -152,8 +167,8 @@
 </main>
 
 <script>
-if(!window.__PAYEREDGE_UI16_8_NO_BARS__){
-window.__PAYEREDGE_UI16_8_NO_BARS__=true;
+if(!window.__PAYEREDGE_UI16_9_POLISH__){
+window.__PAYEREDGE_UI16_9_POLISH__=true;
 
 /* ---------- helpers ---------- */
 const CSV_CANDIDATES=['./vsp_choice_master_v8.4.csv','./data/vsp_choice_master_v8.4.csv'];
@@ -229,7 +244,7 @@ async function loadCSV(){
   let loaded=null;
   for(const url of CSV_CANDIDATES){ const r=await tryFetch(url); if(r.ok){ loaded=r; break; } }
   if(loaded){
-    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.8-no-bars',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
+    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.9-polish',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
     setCache(loaded.text,meta); DATA=parseCSV(loaded.text); buildSimpleIndex(); renderMeta(DATA.length,meta);
     status.textContent=` [ok] ${loaded.url} • ${DATA.length} rows`; computeBundles(); return;
   }
@@ -535,7 +550,7 @@ function renderTier({name,cls,b}){
 function renderStack(rows){
   const stack=el('stack'); stack.innerHTML='';
   rows.forEach(r=>stack.appendChild(renderTier(r)));
-  fitHeroText(); fitViewportScale(); animateMoney();
+  fitHeroText(); fitViewportScale(); animateMoney(420); // smoother flip
 }
 
 /* fit & animation */
