--- a/payeredge.html
+++ b/payeredge.html
@@ -13,6 +13,12 @@
       --tier-best:#ffd166;--tier-better:#a9c2ff;--tier-good:#7be0c3;
       --shadow-lg:0 18px 40px rgba(0,0,0,.35);--shadow-md:0 10px 26px rgba(0,0,0,.28);
       --radius:18px;
+      /* column widths used by both main table and subtables */
+      --col-item:33%;
+      --col-code:12%;
+      --col-copay:19%;
+      --col-hold:18%;
+      --col-fee:18%;
     }
     *{box-sizing:border-box} html,body{height:100%}
     body{
@@ -46,6 +52,7 @@
     .viewport-frame{transform-origin:top left;width:100%}
     .stack{display:grid;grid-template-columns:repeat(4,minmax(320px,1fr));gap:14px;align-items:stretch;margin-top:12px}
 
+    /* card */
     .tier{background:linear-gradient(180deg,#0f1726,#0c1422);border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow-lg);padding:12px}
     .tierHead{display:grid;grid-template-columns:1fr auto;align-items:center;gap:10px;margin-bottom:8px}
     .stars{font-weight:800;display:flex;align-items:center;gap:8px}
@@ -60,48 +67,50 @@
     th{color:var(--muted);font-weight:700;line-height:1.15}
     td{overflow:hidden;text-overflow:ellipsis}
 
-    /* Column widths (money gets more room) */
-    /* 35 / 10 / 19 / 18 / 18 */
-    .bundle col:nth-child(1){width:35%}
-    .bundle col:nth-child(2){width:10%}
-    .bundle col:nth-child(3){width:19%}
-    .bundle col:nth-child(4){width:18%}
-    .bundle col:nth-child(5){width:18%}
+    /* colgroup driven by CSS vars (shared with subtables) */
+    .bundle col:nth-child(1){width:var(--col-item)}
+    .bundle col:nth-child(2){width:var(--col-code)}
+    .bundle col:nth-child(3){width:var(--col-copay)}
+    .bundle col:nth-child(4){width:var(--col-hold)}
+    .bundle col:nth-child(5){width:var(--col-fee)}
 
     .cell-item{line-height:1.32;padding-bottom:2px}
     .cell-item .label{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;font-size:.95em}
     @media (min-width:1200px){ .cell-item .label{-webkit-line-clamp:3} }
-
     .cell-code{white-space:nowrap}
 
-    /* Money columns: right-align + generous inner padding + min width. NO bars. */
+    /* Money columns */
     .cell-money{
       white-space:nowrap;font-weight:800;text-align:right;
       font-size:clamp(11px,1.05vw,13px);
       font-variant-numeric: tabular-nums;
-      padding-left:16px;padding-right:6px; /* breathing room */
+      padding-left:16px;padding-right:6px;
       overflow:visible;text-overflow:clip;
-      min-width:112px;                    /* prevents squeeze/crowding */
+      min-width:112px;
     }
     .th-money{white-space:normal;text-align:right}
-
-    /* ensure right alignment even if class missed */
     .bundle td:nth-child(3), .bundle th:nth-child(3),
     .bundle td:nth-child(4), .bundle th:nth-child(4),
     .bundle td:nth-child(5), .bundle th:nth-child(5){ text-align:right }
 
-    /* tighter head, clean totals */
     table.bundle thead th{white-space:nowrap;letter-spacing:.1px;padding-top:6px;padding-bottom:6px}
     table.bundle tfoot tr th, table.bundle tfoot tr td{
       border-top:1px solid rgba(255,255,255,.08);border-bottom:0;padding-top:9px;padding-bottom:8px
     }
 
-    /* breakdown details */
+    /* breakdown subtable (aligns with parent columns) */
+    .subtable{width:100%;border-collapse:collapse;table-layout:fixed;margin:0}
+    .subtable col:nth-child(1){width:var(--col-item)}  /* blank spacer to align with Item column */
+    .subtable col:nth-child(2){width:var(--col-code)}
+    .subtable col:nth-child(3){width:var(--col-copay)}
+    .subtable col:nth-child(4){width:var(--col-hold)}
+    .subtable col:nth-child(5){width:var(--col-fee)}
+    .subtable th,.subtable td{font-size:12px;padding:6px 6px;border:0}
+    .subtable thead th{color:var(--muted);font-weight:700;padding-top:2px;padding-bottom:4px}
+    .subtable td.money{font-weight:800;text-align:right;font-variant-numeric:tabular-nums;padding-left:16px}
+
     details.break summary{cursor:pointer;opacity:.9}
-    .breakbox{padding:6px 8px 10px}
-    .breakgrid{display:grid;grid-template-columns:1fr repeat(3,minmax(80px,1fr));gap:6px 8px}
-    .breakgrid .hdr{color:var(--muted);font-weight:600;font-size:11px}
-    .breakgrid .money{text-align:right;font-variant-numeric:tabular-nums}
+    .breakrow{border-top:1px dashed #203043}
 
     /* mobile */
     @media (max-width:1280px){ th{font-size:11px} .cell-money{font-size:12px} }
@@ -167,8 +176,8 @@
 </main>
 
 <script>
-if(!window.__PAYEREDGE_UI16_9_POLISH__){
-window.__PAYEREDGE_UI16_9_POLISH__=true;
+if(!window.__PAYEREDGE_UI16_9_2__){
+window.__PAYEREDGE_UI16_9_2__=true;
 
 /* ---------- helpers ---------- */
 const CSV_CANDIDATES=['./vsp_choice_master_v8.4.csv','./data/vsp_choice_master_v8.4.csv'];
@@ -244,7 +253,7 @@ async function loadCSV(){
   let loaded=null;
   for(const url of CSV_CANDIDATES){ const r=await tryFetch(url); if(r.ok){ loaded=r; break; } }
   if(loaded){
-    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.9-polish',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
+    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.9.2',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
     setCache(loaded.text,meta); DATA=parseCSV(loaded.text); buildSimpleIndex(); renderMeta(DATA.length,meta);
     status.textContent=` [ok] ${loaded.url} • ${DATA.length} rows`; computeBundles(); return;
   }
@@ -305,6 +314,7 @@ function chooseSunFor(baseRow){
 }
 
 /* ---------- lines & bundles ---------- */
+function parseCopayNumbers(s){ const m=String(s||'').match(/[0-9]+(?:\.[0-9]{1,2})?/g); return m?m.map(x=>parseFloat(x)):[]; }
 function parseLine(row){
   const desc=row.enhancement||row.subtype||'—';
   const codeStr=String(row.code||'').trim().toUpperCase();
@@ -440,7 +450,9 @@ function computeBundles(){
 
   const all=[];
   for(const m of base){ for(const ar of arOptions){ all.push(buildBundle(m,ar)); } }
-  if(!all.length){ renderStack([{name:'Best',cls:'best',b:null},{name:'Better',cls:'better',b:null},{name:'Good',cls:'good',b:null},{name:'Cheapest',cls:'good',b:null}]); return; }
+  if(!all.length){
+    renderStack([{name:'Best',cls:'best',b:null},{name:'Better',cls:'better',b:null},{name:'Good',cls:'good',b:null},{name:'Cheapest',cls:'good',b:null}]); return;
+  }
 
   const MaxPrice=Math.max(...all.map(b=>b.copay));
   const best = all.reduce((p,c)=>(!p||c.profit>p.profit||(c.profit===p.profit&&c.copay<p.copay)?c:p),null);
@@ -475,24 +487,34 @@ function computeBundles(){
 const tdMoney = (v, key) =>
   `<td class="cell-money" data-key="${key}" data-anim="${v.toFixed(2)}">$${v.toFixed(2)}</td>`;
 
-function breakdownDetails(li,rowKey){
+function breakdownRowSubtable(li,rowKey){
   if(!li.parts?.length) return '';
-  const rows = li.parts.map((p,pi) => `
-    <div class="codepill" title="${p.code}">${p.code}</div>
-    <div class="money" data-key="${rowKey}-p${pi}-c"  data-anim="${p.copay.toFixed(2)}">$${p.copay.toFixed(2)}</div>
-    <div class="money" data-key="${rowKey}-p${pi}-cb" data-anim="${p.chargeback.toFixed(2)}">$${p.chargeback.toFixed(2)}</div>
-    <div class="money" data-key="${rowKey}-p${pi}-pr" data-anim="${p.profit.toFixed(2)}">$${p.profit.toFixed(2)}</div>
+  const rows = li.parts.map((p,pi)=>`
+    <tr>
+      <td></td>
+      <td>${p.code}</td>
+      <td class="money" data-key="${rowKey}-p${pi}-c"  data-anim="${p.copay.toFixed(2)}">$${p.copay.toFixed(2)}</td>
+      <td class="money" data-key="${rowKey}-p${pi}-cb" data-anim="${p.chargeback.toFixed(2)}">$${p.chargeback.toFixed(2)}</td>
+      <td class="money" data-key="${rowKey}-p${pi}-pr" data-anim="${p.profit.toFixed(2)}">$${p.profit.toFixed(2)}</td>
+    </tr>
   `).join('');
   return `
-    <tr>
+    <tr class="breakrow">
       <td colspan="5" style="padding:0;border:0">
         <details class="break" open>
-          <summary>Breakdown for <span class="codepill">${li.code}</span></summary>
-          <div class="breakbox">
-            <div class="breakgrid">
-              <div class="hdr">Code</div><div class="hdr">Copay</div><div class="hdr">Holdback</div><div class="hdr">Service Fee</div>
-              ${rows}
-            </div>
+          <summary style="padding:6px 6px">Breakdown for <span style="border:1px solid var(--line);border-radius:999px;padding:2px 8px;background:#0e1a30">${li.code}</span></summary>
+          <div style="padding:4px 0 8px">
+            <table class="subtable">
+              <colgroup>
+                <col><col><col><col><col>
+              </colgroup>
+              <thead>
+                <tr><th></th><th>Code</th><th>Copay</th><th>Holdback</th><th>Service Fee</th></tr>
+              </thead>
+              <tbody>
+                ${rows}
+              </tbody>
+            </table>
           </div>
         </details>
       </td>
@@ -528,7 +550,7 @@ function renderTier({name,cls,b}){
       ${tdMoney(li.chargeback, `${rowKey}-cb`)}
       ${tdMoney(li.profit, `${rowKey}-pr`)}
     </tr>`;
-    const parts=(li.parts&&li.parts.length)?breakdownDetails(li,rowKey):'';
+    const parts=(li.parts&&li.parts.length)?breakdownRowSubtable(li,rowKey):'';
     return main+parts;
   }).join('');
 
@@ -550,7 +572,7 @@ function renderTier({name,cls,b}){
 function renderStack(rows){
   const stack=el('stack'); stack.innerHTML='';
   rows.forEach(r=>stack.appendChild(renderTier(r)));
-  fitHeroText(); fitViewportScale(); animateMoney(420); // smoother flip
+  fitHeroText(); fitViewportScale(); animateMoney(480);
 }
 
 /* fit & animation */
